--- a/sistema/assests/css/admin/shared/utils.css
+++ b/sistema/assests/css/admin/shared/utils.css
@@ -2,6 +2,7 @@
     background-color: var(--btn-bg);
     color: var(--text-light);
     border: none;
+    border-radius: 4px;
     padding: 0.5rem 1rem;
     font-size: 1rem;
     text-decoration: none;
